--- a/InventoryApp2/app/src/main/res/values/strings.xml
+++ b/InventoryApp2/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Upload Data</string>
     <string name="title_activity_test">TestActivity</string>
 </resources>
