--- a/InventoryApp2/app/src/main/res/values/strings.xml
+++ b/InventoryApp2/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
         completions."
     </string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">Home</string>
+    <string name="title_random">Random</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Upload Data</string>
+    <string name="title_scan">Scan</string>
     <string name="title_activity_test">TestActivity</string>
 </resources>
